// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageUpload /> render correctly 1`] = `
<Row
  bsClass="row"
  className="image-uploader css-class"
  componentClass="div"
  id="id"
>
  <Col
    bsClass="col"
    componentClass="div"
    sm={12}
    xs={12}
  >
    <Dropzone
      accept=""
      disablePreview={false}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
    >
      <Component />
    </Dropzone>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    sm={12}
    xs={12}
  >
    <p
      className="h5 text-center"
    >
      <FormattedMessage
        id="global.image_uploader.image.preview"
        values={Object {}}
      />
    </p>
    <div
      className="image-uploader__preview text-center"
    >
      <img
        alt=""
        className="img-responsive"
        src="http://capco.dev"
      />
    </div>
    <ForwardRef
      className="text-center"
      id="id_delete"
      name="image-uploader__delete"
      onChange={[Function]}
      type="checkbox"
    >
      <FormattedMessage
        id="global.image_uploader.image.delete"
        values={Object {}}
      />
    </ForwardRef>
  </Col>
</Row>
`;

exports[`<ImageUpload /> render correctly without preview 1`] = `
<Row
  bsClass="row"
  className="image-uploader css-class"
  componentClass="div"
  id="id"
>
  <Col
    bsClass="col"
    componentClass="div"
    sm={12}
    xs={12}
  >
    <PreviewMedia
      medias={
        Array [
          Object {
            "id": "media1",
            "name": "image.jpg",
            "size": 42,
            "url": "http://capco.dev",
          },
        ]
      }
      onRemoveMedia={[Function]}
    />
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    sm={12}
    xs={12}
  >
    <Dropzone
      accept=""
      disablePreview={true}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
    >
      <Component />
    </Dropzone>
  </Col>
</Row>
`;
